# whitefoxcloud-coding-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml  pr-guard.yml
.lean-ctx/: graph.db  graph.meta.json
.omc/: project-memory.json
.omc/sessions/: 8f550373-b10a-4898-b60f-523b586fce97.json  fcb1a2f8-c270-4a7b-b62f-aa6a595e3a7f.json
.omc/state/: agent-replay-8f550373-b10a-4898-b60f-523b586fce97.jsonl  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-05-16T15-12-08-417Z.json
docs/: Python Coding Challenge - Latest version.md
docs/superpowers/plans/: 2026-05-15-fastapi-books-api-implementation.md
docs/superpowers/specs/: 2026-05-15-fastapi-books-api-design.md
scripts/: init_db.py
src/: AGENTS.md  __init__.py  auth.py  config.py  exceptions.py  main.py  models.py  rate_limiter.py
src/auth/: token_store.py
src/core/: aws.py
src/middleware/: rate_limit.py  rate_limiter.py
src/routes/: AGENTS.md  auth.py  books.py
src/schemas/: __init__.py  auth.py  books.py
src/services/: AGENTS.md  book_service.py
static/: index.html
tests/: AGENTS.md  conftest.py  test_auth.py  test_config.py  test_exceptions.py  test_main.py  test_models.py  test_rate_limit_middleware.py  test_rate_limiter.py
tests/integration/: test_books.py
tests/test_routes/: test_auth.py  test_books.py
tests/test_services/: test_book_service.py
(+3 files in other folders)
