[project]
name = "books-api"
version = "0.1.0"
description = "FastAPI Books API on AWS Lambda"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.6.0",
    "mangum>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "moto>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
